--- a/src/components/pages/appointment/Styles/AppointmentPage.css
+++ b/src/components/pages/appointment/Styles/AppointmentPage.css
@@ -14,3 +14,15 @@
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 } */
+
+@media screen and (max-width: 768px) {
+    .whole-appointment-container {
+        height: auto;
+        width: 70rem;
+        padding-top: 230px;
+        background-color: white;
+        display: flex;
+        justify-content: center;
+    }
+
+}
