--- a/src/components/pages/home/Style/HIW.css
+++ b/src/components/pages/home/Style/HIW.css
@@ -91,9 +91,9 @@
     transition: background-color 0.6s ease;
   } */
   
-  .active, .dot:hover {
+  /* .active, .dot:hover {
     background-color: #717171;
-  }
+  } */
   
   /* Fading animation */
   .fade {
@@ -120,10 +120,11 @@
   }
 
   .main_hiw_container {
-    background: url(../../../../assets/img/h2.jpg);
+    background: url(../../../../assets/img/b4.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    padding:2rem 7%;
   }
 
   .whole_hiw_container {
@@ -151,4 +152,149 @@
   text-transform: uppercase;
   font-weight: bolder;
   font-size: 48px;
+}
+
+@media screen and (max-width: 768px) {
+
+  .main_hiw_container {
+    background: url(../../../../assets/img/b4.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* background-attachment: fixed; */
+    justify-content: center;
+    display: flex;
+    height: 220vh;
+    width: 100%;
+  }
+
+  .whole_hiw_container {
+    margin: 100px;
+    /* border: solid red; */
+  }
+
+
+  .hiw_container {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+  }
+
+  .hiw_content {
+    text-align: center;
+    /* border: solid blue; */
+  }
+
+  .hiw_content h2 {
+    color: black;
+    text-transform: uppercase;
+    font-weight: bolder;
+    font-size: 4rem;
+  }
+  
+
+  .mySlides img {
+    width: 900px;
+    height: 900px;
+  }
+
+  /* Slideshow container */
+.slideshow-container {
+  display: flex;
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  /* border: solid yellow; */
+}
+
+ /* Next & previous buttons */
+ .prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 50px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  color: orange;
+  background-color: rgba(0,0,0,0.8);
+  text-decoration: none;
+}
+
+.hiw-separator {
+  /* width: 150px; */
+  height: 4px;
+  background-color: #e12454;
+  margin: 20px;
+}
+
+.hiw-text-container {
+padding: 10px;
+}
+
+.hiw-text-container p{
+  color: black;
+  font-size: 40px;
+  font-weight: 500;
+  }
+
+/* Caption text */
+.text {
+  font-size: 42px;
+  padding: 8px 12px;
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  /* border: solid red; */
+}
+
+.text h2{
+  color: white;
+  text-transform: uppercase;
+  font-weight: bolder;
+}
+
+.text p{
+  color: white;
+}
+
+
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 30px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+  
 }
