--- a/src/components/pages/home/Style/WhyHP.css
+++ b/src/components/pages/home/Style/WhyHP.css
@@ -27,7 +27,7 @@ h5, .h5 {
 }
 
 .h5 {
-    display: block;
+    display: block; 
     font-size: 0.83em;
     margin-block-start: 1.67em;
     margin-block-end: 1.67em;
@@ -134,4 +134,85 @@ p {
     font-weight: 600;
     font-size: 24px;
     /* border: solid red; */
+}
+
+
+@media screen and (max-width: 768px) {
+
+    .main_whyhp_container {
+        background-color: #ebf5f5;
+        border-bottom-width: 2px;
+        border-bottom-color: #eaeaea;
+        border-bottom-style: solid;
+        border-top-width: 2px;
+        border-top-color: #eaeaea;
+        border-top-style: solid;
+        padding:2rem 7%;
+        height: 300vh;
+    }
+    
+    /* .home1-section-heading1 {
+        color: #e12454;
+        text-align: center;
+        padding-bottom: 12px;
+        border: solid red;
+    } */
+    
+    .whyhp-home-section-heading2 {
+        color: black;
+        font-size: 7rem;
+        text-align: center;
+        font-weight: 600;
+        /* border: solid blue; */
+    }
+    
+    .whyhp-home-section-heading2 span {
+        color: #F50057;
+    }
+    
+    .main_whyhp_container .whyhp_content_container p {
+        text-align: center;
+        margin-top: 10px;
+        /* margin: 20px 50px 50px 0px; */
+        font-size: 4rem;
+        width: 100%;
+        /* border: solid green; */
+    }
+    
+    .whyhp-section {
+        display: flex;
+        justify-content: center;
+        /* border: solid yellow; */
+        /* margin: 50px; */
+    
+    }
+    
+    .whyhp_item_container {
+        display: flex;
+        flex-direction: column;
+        /* border: solid violet; */
+    }
+    
+    
+    .whyhp_content {
+        margin-top: 10px;
+        text-align: center;
+        width: 100%;
+        height: 85vh;
+        background-color: #fff;
+        padding: 25px;
+        box-sizing: border-box;
+        border-radius: 5px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        /* border: solid orange; */
+    }
+    
+    .whyhp_content h5 {
+        /* margin-top: 50px; */
+        color: black;
+        font-weight: 600;
+        font-size: 5rem;
+        /* border: solid red; */
+    }
+    
 }
